--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "copyright": "2015",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "matchdep": "^0.3.0"
