--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-filter": "^4.0.0",
+    "gulp-pxtorem": "^2.0.0",
     "gulp-sass": "^2.3.1",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
