--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-ts-template",
   "version": "1.0.0",
   "scripts": {
-    "start": "gulp && tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "start": "gulp && tsc && concurrently \"npm run tsc:w\" \"npm run lite\" \"node app/web_service/server.js\" ",
     "lite": "lite-server",
     "postinstall": "typings install",
     "tsc": "tsc",
@@ -37,6 +37,10 @@
     "gulp-sass": "^2.3.1",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings": "^1.0.4"
+    "typings": "^1.0.4",
+    "express": "^4.13.4",
+    "formidable": "^1.0.17",
+    "httpdispatcher": "^1.0.0",
+    "nano": "^6.2.0"
   }
 }
