--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
+    "body-parser": "^1.15.2",
     "concurrently": "^2.0.0",
     "express": "^4.13.4",
     "formidable": "^1.0.17",
