--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-sass": "^2.3.1",
     "httpdispatcher": "^1.0.0",
     "lite-server": "^2.2.0",
+    "moment": "^2.14.1",
     "mongodb": "^1.4.40",
     "mongoskin": "^2.1.0",
     "monk": "^1.0.1",
