--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "formidable": "^1.0.17",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-bundle-assets": "^2.27.1",
     "gulp-filter": "^4.0.0",
     "gulp-pxtorem": "^2.0.0",
     "gulp-sass": "^2.3.1",
