--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "browserify": "^13.1.0",
     "del": "^2.2.0",
+    "express": "^4.14.1",
     "gray-matter": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.1",
