--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.24.1",
+    "contentful": "^5.1.0",
     "css-loader": "^0.28.4",
     "expose": "^0.1.4",
     "express": "^4.15.3",
